--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,36 @@ margin-bottom: 20px;
    fill: #FFFFFF;
 }
 
+.sab {
+    margin-left: 93px;
+}
+
+
+.sab-input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(47, 48, 58, 1);
+    outline: none;
+
+}
+.sab-input::placeholder {
+Font family: Roboto;
+Font style: Regular;
+Font size: 16px;
+Line height: 1.07;
+Align: Left;
+Vertical align: Center;
+Letter spacing: 3%;
+}
+
+.btn-sab {
+    width: 200px;
+    height: 50px;
+    background: rgba(33, 150, 243, 1);
+    border-radius: 4px;
+    cursor: pointer;
+}
 
 
 
@@ -732,8 +762,40 @@ color: #FFFFFF;
     position: relative;
     transform: scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 40px;
+}
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    background: transparent;
 }
 
+.modal-title {
+Font family: Roboto;
+Font style: 700;
+Font size: 20px;
+Line height: 1.15;
+Line height: 100%;
+Align: Center;
+Vertical align: Top;
+Letter spacing: 3%;
+color: rgba(33, 33, 33, 1);
+
+}
+
+.input-label {
+Font family: Roboto;
+Font style: Regular;
+Font size: 12px;
+Line height: 1.16;
+Line height: 100%;
+Align: Left;
+Vertical align: Top;
+Letter spacing: 1%;
+color: solid #757575;
+}
 
 .close-btn {
     position: absolute;
