--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ img {
     max-width: 100%; height: auto;
 }
 *, ::after, ::before
+
 /*----------cursor-------------*/
 
 .cursor {
@@ -756,7 +757,7 @@ color: #FFFFFF;
 
 .modal {
     width: 528px;
-    height: 581px;
+    min-height: 581px;
     background-color: #ffffff;
     border-radius: 4px;
     position: relative;
@@ -770,32 +771,113 @@ color: #FFFFFF;
     border-radius: 4px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     background: transparent;
+    padding-left: 42px;
+    padding-right: 20px;
+    outline: none;
+}
+
+.modal-input:focus {
+    border-color: var(--acent-color);
+} 
+.modal-input:focus + .input-icon {
+    fill: var(--acent-color);
 }
 
 .modal-title {
-Font family: Roboto;
-Font style: 700;
-Font size: 20px;
-Line height: 1.15;
-Line height: 100%;
-Align: Center;
-Vertical align: Top;
-Letter spacing: 3%;
+font-family: Roboto;
+font-style: 700;
+line-height: 1.15;
+line-height: 100%;
+vertical-align: Top;
+letter-spacing: 3%;
 color: rgba(33, 33, 33, 1);
-
+margin-bottom: 12px;
 }
 
 .input-label {
-Font family: Roboto;
-Font style: Regular;
+font-family: Roboto;
+font-style: Regular;
 Font size: 12px;
-Line height: 1.16;
-Line height: 100%;
+lint height: 1.16;
+lint height: 100%;
 Align: Left;
-Vertical align: Top;
-Letter spacing: 1%;
 color: solid #757575;
+display: block;
+margin-bottom: 4px;
 }
+
+.input-icon {
+    position: absolute;
+    left: 12px;
+   top: 50%;
+   transform: translateY(-50%);
+}
+.input-wrapper {
+    display: block;
+    position: relative;
+}
+
+.modal-fild {
+    margin-bottom: 10px;
+ 
+}
+.modal-text-input {
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    resize: none;
+     border: 1px solid rgba(33, 33, 33, 0.2);
+     padding: 12px 16px;
+   
+}
+
+.modal-btn {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+    background-color: #188CE8;
+    border: none;
+    border-radius: 4px;
+    margin-top: 20px;
+}
+
+.check-text {
+font-family: roboto;
+font-style: Regular;
+font-size: 14px;
+line-height: 1.46;
+Align: Left;
+vertical-align: Top;
+letter-spacing: 3%;
+color: Solid #757575;
+display: flex;
+}
+.check-text span {
+    width: 16px;
+    height: 15px;
+    border-radius: 2px;
+    border: 1px solid var(--secondary-title-color);
+    margin-right: 7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-checkbox:checked + .check-text span {
+    background-color: #2196F3;
+    border: none;
+    background-origin: border-box;
+    background-size: contain;
+}
+.modal-checkbox {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute;
+}
+
 
 .close-btn {
     position: absolute;
